	-> bug fix: Error messages in the user manager were not closable 
	-> bug fix: merging of two shapes keeps the reading order and adds a space between them
	-> bug fix: selecting a tag from the table now also displays the right position in the image
	-> bug fix: Sorting lines according to coordinates now also works for tables (R-button in Layout tab)
	-> bug fix: Server export of tags and tables (xlsx) wasn't transparent to the user if there weren't any
	-> bug fix: Table export into xlsx also works fine for highly structured tables
	-> bug fix: vanishing properties in text tag property editor
	-> new textfield to quickly open a document with a certain id
	-> re-engineer the docking state buttons to quickly show/hide the control or transcription view with one click
	-> remove flickering in transcription widget while typing and scrolling
	-> add "show all lines of a page in the transcription widget" setting (enable via transcription widget toolbar wrench icon)
	-> add possibility to move transcription widget to the right side (enable via corresponding docking state dropdown menu button, i.e. third button on top left)
	-> PDF import: show progress during image extraction
	-> PDF import: path for temporary files is now correctly built in Linux
	-> bug fix: closing export dialog immediately after opening caused an exception (widget disposed)
	-> config.properties logHttp setting: enable to get full INFO level HTTP traffic log in console and log file 
	-> implement scrollbar mode for canvas and set it to default scrolling mode 
	-> convert from tables to simple textregions for all cells without losing lines and their transcriptions (via "Metadata->Structural" tab)
	-> CITlab HTR+ basic integration
	 
1.5.1
	-> bugfix: UI crashed when opening advanced error rate tool and switching page afterwards
	
1.5.2
	-> bugfix: user could not edit last line if empty (index out of bounds exception)
	-> bugfix: index out of bounds exception when editing last, empty line
	